[project]
name = "pytorch360convert"
description = "A collection of custom nodes for working with and converting between 360 degree equirectangular images, cubemap, and perspective images. Panoramic 360 images are also sometimes known as VR photography (virtual reality), HDRI, image spheres, spherical images, 360 pano. They can be used for a variety of things, like skybox/environment textures."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["pytorch360convert"]

[project.urls]
Repository = "https://github.com/ProGamerGov/ComfyUI_pytorch360convert"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "progamergov"
DisplayName = "ComfyUI_pytorch360convert"
Icon = ""
